--- a/ACIML_prototype_lab.ipynb
+++ b/ACIML_prototype_lab.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNq906LF2ko0PUA/XU6zhXJ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -5140,6 +5142,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mezaga/ACIML-prototype/blob/main/ACIML_prototype_lab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
