Creado mediante Colaboratory

--- a/ACIML_prototype_lab.ipynb
+++ b/ACIML_prototype_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCeFA5fD5XfT0/Osm+/XaS",
+      "authorship_tag": "ABX9TyNV4fGuBGYg9/WlDFkq+jCo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1998,7 +1998,7 @@
       "cell_type": "code",
       "source": [
         "#@title Carga de Librerias\n",
-        "#@markdown *Solo evalúa una vez esta celda*\n",
+        "##@markdown *Solo evalúa una vez esta celda*\n",
         "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1P--SbiazyeD_m3Nxhuz331knZ2B-iWZO' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1P--SbiazyeD_m3Nxhuz331knZ2B-iWZO\" -O encoder2_cdmx.zip && rm -rf /tmp/cookies.txt\n",
         "!unzip /content/encoder2_cdmx.zip\n",
         "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=169SFhtDzPuoM0d5YzIdRVjx3C-8dSB7o' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=169SFhtDzPuoM0d5YzIdRVjx3C-8dSB7o\" -O decoder2_cdmx.zip && rm -rf /tmp/cookies.txt\n",
@@ -2292,7 +2292,7 @@
         "\n",
         "env_dur_synths = dict(zip(synthesis_names,[envdur for x in range(len(synthesis_names))]))\n",
         "\n",
-        "gen = [widgets.BoundedIntText(value=7, min=0, max=10,step=1,description='AMOUNT:',disabled=False),\n",
+        "gen = [widgets.BoundedIntText(value=7, min=0, max= 100,step=1,description='AMOUNT:',disabled=False),\n",
         "       widgets.Text(value='Synth', placeholder='Type something', description='group_id:', disabled=False)\n",
         "]\n",
         "\n",
@@ -2586,10 +2586,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "073970f0-7d7f-4479-9a74-a8248f330824",
-        "cellView": "form"
+        "outputId": "073970f0-7d7f-4479-9a74-a8248f330824"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2716,7 +2715,7 @@
         "from sklearn import preprocessing\n",
         "from google.colab import files\n",
         "\n",
-        "dropdown = 'Grabar' #@param [\"Crear\",\"Subir archivos\",\"Grabar\"]\n",
+        "#dropdown = 'Grabar' #@param [\"Crear\",\"Subir archivos\",\"Grabar\"]\n",
         "'''\n",
         "if dropdown == 'Subir archivos':\n",
         "  \n",
@@ -2844,7 +2843,6 @@
       ],
       "metadata": {
         "id": "Kzf4IIJYnwrn",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128,
@@ -2863,7 +2861,7 @@
         },
         "outputId": "9784717c-8efc-4902-f518-344e5f2c859e"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2981,7 +2979,7 @@
         },
         "outputId": "2053013e-fedb-4a61-b845-033246185ce7"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3140,7 +3138,7 @@
         "id": "Z6i7fQADiLoT",
         "outputId": "7cea3aa6-5a94-4db0-97c9-208fe6bffeaa"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3223,7 +3221,7 @@
         "id": "tOmE4uiPhra8",
         "outputId": "be7a505b-ee1a-40d2-dd09-937bbe304311"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3340,7 +3338,7 @@
         "id": "TJQZ0LSWuNSg",
         "outputId": "d11e8227-974a-486f-ab59-bc5bb45e75f5"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3562,7 +3560,7 @@
         "id": "AMEl3IzPvbAf",
         "outputId": "e65d3436-b0e6-446c-853d-ef93779501a4"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3684,7 +3682,7 @@
         "outputId": "6680e8a9-d43c-4cfb-da50-776ced331f1e",
         "cellView": "form"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
