Creado mediante Colaboratory

--- a/ASCIML_prototype_lab.ipynb
+++ b/ASCIML_prototype_lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPainDUxJAw9MRI4oWQ1qmj",
+      "authorship_tag": "ABX9TyMPuFy1/fE2+hA6VE0Nk0g4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5850,11 +5850,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **ACIML Prototipo** 🔊🔊\n",
+        "# **ASCIML Prototipo** 🔊🔊\n",
         "\n",
         "¡Hola!\n",
         "\n",
-        "Muchas gracias por tomarte el tiempo de participar en este estudio. ACIML es un prototipo que permite entrenar un modelo de inteligencia artificial generativo de manera interactiva con señales digitales. Una vez terminado el entrenamiento, es posible crear nuevos sonidos a partir de los sonidos aprendidos.\n",
+        "Muchas gracias por tomarte el tiempo de participar en este estudio. ASCIML es un prototipo que permite entrenar un modelo de inteligencia artificial generativo de manera interactiva con señales digitales. Una vez terminado el entrenamiento, es posible crear nuevos sonidos a partir de los sonidos aprendidos.\n",
         "\n",
         "Para esto es importante tomar las siguientes etapas en cuenta:\n",
         "\n",
@@ -6470,7 +6470,7 @@
         "outputId": "d97d25a4-9d72-4a33-d97b-3a4c57b7c47c",
         "cellView": "form"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6873,7 +6873,7 @@
         },
         "outputId": "5616d000-e7f3-495a-f74b-921bcb9d6e9d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6974,7 +6974,7 @@
         },
         "outputId": "69706be5-82a5-4ced-9e84-cabe767d7050"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7133,7 +7133,7 @@
         "id": "Z6i7fQADiLoT",
         "outputId": "c6e84ab1-d954-427c-dfc0-e5a99bf17dbd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7217,7 +7217,7 @@
         "id": "tOmE4uiPhra8",
         "outputId": "7b93ac5e-010e-4b61-e39a-3a5b9940d404"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7732,7 +7732,7 @@
         "id": "TJQZ0LSWuNSg",
         "outputId": "30482b9b-eeb3-489f-dac6-6d437d2017ab"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7865,7 +7865,7 @@
         "id": "AMEl3IzPvbAf",
         "outputId": "e253eaa9-f750-42ce-d0cb-268ec2aa78aa"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7987,7 +7987,7 @@
         "outputId": "7442d672-7a39-428f-c505-b02b4ed9f510",
         "cellView": "form"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8124,6 +8124,16 @@
       ],
       "metadata": {
         "id": "yk_rg6ux0y5u"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ENCUESTA :**\n",
+        "https://forms.gle/cSvhGNUWQVJ4MCsWA"
+      ],
+      "metadata": {
+        "id": "xRvEYnwTeQua"
       }
     }
   ]
